+get all adv, +adv filter -- doesn't work, need access to query, that hided by adv repository struct
